--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "node-modules-check": "checkForNodeModules.js",
+    "start": "npm run node-modules-check && node start-index.js"
   },
   "repository": {
     "type": "git",
